# fugu

./: README.md
configs/: bundle.sh
configs/files/: fugu.json
demos/gpu-mode/: PROMPT_qr_v2_triton.md  README.md  evaluation.py  init.py  local_eval.sh  meta_local.md  meta_local_oai.md  submission.py
demos/humanoid_control/: .gitignore  README.md
demos/humanoid_control/fugu/artifacts/: g1_walk_metrics.json
demos/humanoid_control/fugu/scripts/: g1_walk_controller.py
demos/humanoid_control/fugu_ultra/artifacts/: g1_dcm_march_metrics.json
demos/humanoid_control/fugu_ultra/scripts/: g1_dcm_march.py  ik_walk.py  proto_walk.py  record_g1_march.py  walk_g1.py  walk_g1_v2.py
demos/humanoid_control/gemini/: g1_walk_controller.py
demos/humanoid_control/gpt/: g1_walk.py
demos/humanoid_control/opus/g1_walk/: walk_g1.py
demos/rubik/: README.md  call_models_standalone.py  rubik_compare.py  run_checkpointed.py
demos/rubik/results/reference/: first100_all5.json  new200_fugu.json  (+5 more)
demos/slimevolley/: README.md  policies.json  slimevolley.html
demos/slimevolley/policies/: claude.py  fugu-another-run.py  fugu.py  gemini.py
demos/slimevolley/train/: .gitignore  INSTRUCTIONS.md  README.md  assess.py  common.py  preflight.py  pyproject.toml  run.sh  train.py
demos/slimevolley/train/env/slimevolleygym/: slimevolley.py
demos/slimevolley/web/: app.js  build.mjs  controls.js  engine.js  index.html  manifest.js  match.js  panels.js  pyrunner.js  render.js  rnn.js  style.css
demos/users_demo/: README.md
docs/: commands_details.md
scripts/: codex-fugu  install.sh
